add span kind